examples/test/testpolicy6346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6346
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key19: value16
      key9: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value8
      podSelector:
        matchLabels:
          key41: value41
          key12: value30
          key31: value34
